--- a/internproject/index/menu.html
+++ b/internproject/index/menu.html
@@ -17,6 +17,7 @@
             background-size:cover ;
             padding-left: 0px;
             padding-right: 0px;
+            margin : 0px;
 
         }
         header
