--- a/internproject/login/login.html
+++ b/internproject/login/login.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Signup</title>
-    <link rel="stylesheet" href="signup.css">
-    <link rel="javascript" href="signup.js">
+    <title>Login</title>
+    <link rel="stylesheet" href="login.css">
+    <link rel="javascript" href="login.js">
 </head>
 <body>
     
@@ -14,11 +14,10 @@
         <div class="top">
             <h1 class="head">Ecommerce website</h1>
         </div>
-        <form action="signup.php" method="POST">
-            <h3>Signup Form</h3>
+        <form action="login.php" method="POST">
+            <h3>Login Form</h3>
             <input type="text" class="username" placeholder="Enter username" required>
             <input type="text" class="password" placeholder="Enter password" required>
-            <input type="text" class="confirm" placeholder="Confirm password" required>
             <input onclick="process()" type="submit" class="submit" type="submit" value="Submit">
 
         </form>
